# course-scheduler

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  test schedules.txt  test.txt
include/: course_graph.h  course_node.h  course_reader.h  course_request.h  course_writer.h
src/: course_graph.cpp  course_node.cpp  course_reader.cpp  course_writer.cpp
